--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -697,12 +697,15 @@ As can be seen in Figure~\ref{fig:case_hydro_vs_dist_3d} the selected amino acid
   \caption{\label{fig:case_hydro_vs_dist_3d} {\color{red}TODO} než se zeptaš, SS jsou dodrbané, musím opravit :D}
 \end{figure}
 
- 
-{\color{red}\textbf{Odtud na to nešahej :D}}
 
-tady bude nějaká kravina ohledně selekce AA - zatím makám na datech
+As the last step, the biochemist went back to the bar chart, lowered the amount of aggregation and selected all bar charts containing the two hydrophobic amino acids (see Figure~\ref{fig:case_hydro_vs_dist_residues_selected}). 
+{\color{red}} I thought/hoped, that this would clearly show, that these two AA are involved in the "not being able to bind" section (\ie where the high peaks are) and hence prove my theory stated at the begining, but this clearly have not  happen so, what next?.
 
-
+\begin{figure}[htb]
+	\centering
+  \includegraphics[width=0.95\linewidth]{img/case_hydro_vs_dist_residues_selected.png}
+  \caption{\label{fig:case_hydro_vs_dist_residues_selected} {\color{red}TODO}}
+\end{figure}
 
 
 
