--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -592,7 +592,7 @@ The trajectory is colored according to one of the geometric and physico-chemical
 \begin{figure*}[htb]
 	\centering
   \includegraphics[width=0.95\textwidth]{img/case_overview.pdf}
-  \caption{\label{fig:case_overview} {Overview of the simulation consisting of $50.000$ time steps. Selected part was explored in detail in our case study.}
+  \caption{\label{fig:case_overview} Overview of the simulation consisting of $50.000$ time steps. Selected part was explored in detail in our case study.}
 \end{figure*}
 
 In this section we will describe one of case studies which we have performed using our novel exploration tool.
