Added empty conclusion file

--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -730,7 +730,7 @@ As the last step, the biochemist went back to the bar chart, lowered the amount 
 use case + feedback
 
 \section*{Conclusions - All}
-and future work 
+\input{parts/conclusion.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%                                          %%
