--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -588,7 +588,7 @@ Using this function the whole trajectory can be automatically simplified.
 If the automatic simplification does not lead to satisfactory results, selected parts of the trajectory can be further simplified manually.
 The trajectory is colored according to one of the geometric and physico-chemical attributes. 
 
-\section*{Analysis Procedure}
+\section*{Analysis Procedure and Discussion}
 
 \begin{figure*}[htb]
 	\centering
@@ -708,9 +708,7 @@ In the last step the biochemists went back to the bar chart, lowered the aggrega
 
 
 %{\color{red}Note that the biochemists can also estimate that the provided data were probably computed using Steered molecular dynamics (SMD) \todo{popsat co je SMD in RW?} simulation since the simulation starts with ligand in the active site (signalized by red color.)}
- 
-\section*{Results and Discussion - BK}
-use case + feedback
+
 
 \section*{Conclusions - All}
 and future work 
