tak to nebyl last commit

--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -611,7 +611,7 @@ After spending some time outside it found again its way into a protein tunnel an
 The whole process is then repeated again while this time the ligand spent significantly more time outside the protein or nearby its surface and returned just for last few hundreds of time steps. 
 
 After the first evaluation of the overall ligand trajectory the biochemists stated that they would like to evaluate the interactions between the ligand and protein in more detail using the following scenario (see Figure~\ref{fig:case_overview}). 
-They focused on the part where the ligand traveled from the active site to the protein surface (see Section~\ref{sec:case1}). 
+They focused on the part where the ligand traveled from the active site to the protein surface. 
 
 The exploration of this part of the simulation allows the biochemists to closely evaluate the influence of the protein tunnel and its properties to the ligand movements.
 
