Include of conclusion back again

--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -711,7 +711,7 @@ In the last step the biochemists went back to the bar chart, lowered the aggrega
 
 
 \section*{Conclusions - All}
-and future work 
+\input{parts/conclusion.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%                                          %%
